# animal_pics_bot

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
src/: image_getter.rs  main.rs  pic_bot.rs  settings.rs
